--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -3,37 +3,79 @@ name: Build OpenWrt x86_64
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 1 1,4,7,10 *'
+    - cron: '0 2 * * *'  # 每天凌晨2点自动触发
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-
-
-      - name: Check current directory and file paths
-        echo "当前工作目录是："
-        pwd
-        echo "根目录文件列表："
-        ls -l
-        echo "查看 config 目录内容："
-        ls -l config
-        echo "查看 openwrt 目录内容："
-        ls -l openwrt
-
-      - name: Copy feeds.conf.default
+      - name: Copy config and scripts
         run: |
-          if [ -f config/feeds.conf.default ]; then
-            cp config/feeds.conf.default openwrt/feeds.conf.default
+          cp config/.config openwrt/.config
+          cp config/customize.sh openwrt/
+          cp -r scripts/. openwrt/scripts/
+          chmod +x openwrt/customize.sh openwrt/scripts/*.sh      
+
+    
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Restore last built version cache
+        id: cache-version
+        uses: actions/cache@v3
+        with:
+          path: last_build_version.txt
+          key: last-build-version-cache
+          restore-keys: last-build-version-cache
+
+      - name: Get latest OpenWrt stable release tag
+        id: get_latest_tag
+        run: |
+          TAG=$(curl -s https://api.github.com/repos/openwrt/openwrt/tags | jq -r '.[].name' | grep '^v[0-9]' | grep -vE 'rc|SNAPSHOT' | sort -Vr | head -n1)
+          echo "latest_tag=$TAG" >> $GITHUB_OUTPUT
+
+      - name: Compare versions
+        id: compare
+        run: |
+          LAST_VER=$(cat last_build_version.txt 2>/dev/null || echo "none")
+          echo "Last built version: $LAST_VER"
+          echo "Latest upstream version: ${{ steps.get_latest_tag.outputs.latest_tag }}"
+          if [ "$LAST_VER" = "${{ steps.get_latest_tag.outputs.latest_tag }}" ]; then
+            echo "No new version detected. Skipping build."
+            exit 78
           else
-            echo "No feeds.conf.default found in config/, skipping copy"
+            echo "New version detected. Proceeding."
           fi
+
+      - name: Clone OpenWrt source
+        env:
+          LATEST_TAG: ${{ steps.get_latest_tag.outputs.latest_tag }}
+        run: |
+          git clone --depth=1 --branch "$LATEST_TAG" https://github.com/openwrt/openwrt.git
+
+
+      - name: Free up disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+      - name: Show available disk space
+        run: df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            python3 python3-setuptools python3-distutils-extra \
+            build-essential clang flex bison g++ gawk \
+            gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+            rsync unzip zlib1g-dev file wget python3-pyelftools ccache ash
 
       - name: Update all feeds
         run: |
@@ -51,7 +93,7 @@ jobs:
       - name: List openwrt/scripts contents
         run: ls -l openwrt/scripts
 
-      - name: Run ext_packages.sh if present (clone OpenWrt-nikki etc.)
+      - name: Run ext_packages.sh if present
         run: |
           cd openwrt
           if [ -f scripts/ext_packages.sh ]; then
@@ -101,6 +143,15 @@ jobs:
           tag: openwrt-x86_64-${{ github.run_id }}
           name: OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
           body: |
-            🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }} 
+            🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
             📅 ${{ steps.buildtime.outputs.time }}
           artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
+
+      - name: Save latest built version to file
+        run: echo "${{ steps.get_latest_tag.outputs.latest_tag }}" > last_build_version.txt
+
+      - name: Save last built version cache
+        uses: actions/cache@v3
+        with:
+          path: last_build_version.txt
+          key: last-build-version-cache
