--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -138,13 +138,15 @@ jobs:
           cd openwrt
           make -j$(nproc) || make -j1 V=s
 
-      # 19. 提取 OpenWrt 版本号
+      # 19. 提取 OpenWrt 版本号（使用 make -C 获取）
       - name: Extract OpenWrt version
         id: getversion
         run: |
-          VERSION=$(grep '^VERSION:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
-          PATCHLEVEL=$(grep '^PATCHLEVEL:=' openwrt/include/version.mk | cut -d= -f2 | tr -d ' ')
+          cd openwrt
+          VERSION=$(make -s -C include version.mk VAL=VERSION printval)
+          PATCHLEVEL=$(make -s -C include version.mk VAL=PATCHLEVEL printval)
           FULLVERSION="${VERSION}.${PATCHLEVEL}"
+          echo "Detected version: $FULLVERSION"
           echo "fullversion=$FULLVERSION" >> $GITHUB_OUTPUT
 
       # 20. 获取构建时间
@@ -161,7 +163,7 @@ jobs:
           name: OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
           body: |
             🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
-            📅 ${{ steps.buildtime.outputs.time }}
+            📅 构建时间：${{ steps.buildtime.outputs.time }}
           artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
 
       # 22. 保存本次构建的版本号到文件
