--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -17,14 +17,12 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      # 3. 恢复上次构建版本缓存
-      - name: Restore last built version cache
-        id: cache-version
-        uses: actions/cache@v3
-        with:
-          path: last_build_version.txt
-          key: last-build-version-cache
-          restore-keys: last-build-version-cache
+      # 2.5 清理版本缓存文件，强制触发构建测试
+      - name: Clear last build version cache file
+        run: |
+          echo "Clearing version cache file to force build"
+          rm -f last_build_version.txt
+          
 
       # 4. 获取最新 OpenWrt stable release tag
       - name: Get latest OpenWrt stable release tag
