--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -17,11 +17,14 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      # 2.5 清理版本缓存文件，强制触发构建测试
-      - name: Clear last build version cache file
-        run: |
-          echo "Clearing version cache file to force build"
-          rm -f last_build_version.txt
+      # 3. 恢复上次构建版本缓存
+      - name: Restore last built version cache
+        id: cache-version
+        uses: actions/cache@v3
+        with:
+          path: last_build_version.txt
+          key: last-build-version-cache
+          restore-keys: last-build-version-cache
           
 
       # 4. 获取最新 OpenWrt stable release tag
@@ -112,31 +115,28 @@ jobs:
             exit 1
           fi
 
-      # 15. 清理 customize.sh 中多余的 cd 命令，避免二次切换目录
-      - name: Clean customize.sh to remove internal 'cd openwrt'
-        run: sed -i '/cd openwrt/d' openwrt/customize.sh
 
-      # 16. 运行 customize.sh
+      # 15. 运行 customize.sh
       - name: Run customize.sh
         run: |
           cd openwrt
           chmod +x customize.sh
           ./customize.sh
 
-      # 17. 生成 defconfig 并下载源码
+      # 16. 生成 defconfig 并下载源码
       - name: Make defconfig and download sources
         run: |
           cd openwrt
           make defconfig
           make download -j8
 
-      # 18. 编译 OpenWrt (x86_64)
-      - name: Build OpenWrt (x86_64)
+      # 17. 编译 OpenWrt x86_64
+      - name: Build OpenWrt x86_64
         run: |
           cd openwrt
           make -j$(nproc) || make -j1 V=s
 
-      # 19. 提取 OpenWrt 版本号（使用 make -f）
+      # 18. 提取 OpenWrt 版本号
       - name: Extract OpenWrt version
         id: getversion
         run: |
@@ -147,12 +147,12 @@ jobs:
           echo "Detected version: $FULLVERSION"
           echo "fullversion=$FULLVERSION" >> $GITHUB_OUTPUT
 
-      # 20. 获取构建时间
+      # 19. 获取构建时间
       - name: Get build time
         id: buildtime
         run: echo "time=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
-      # 21. 创建 GitHub Release 并上传固件
+      # 20. 创建 GitHub Release 并上传固件
       - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
@@ -164,11 +164,11 @@ jobs:
             📅 构建时间：${{ steps.buildtime.outputs.time }}
           artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
 
-      # 22. 保存本次构建的版本号到文件
+      # 21. 保存本次构建的版本号到文件
       - name: Save latest built version to file
         run: echo "${{ steps.getversion.outputs.fullversion }}" > last_build_version.txt
 
-      # 23. 缓存最新版本号文件
+      # 22. 缓存最新版本号文件
       - name: Save last built version cache
         uses: actions/cache@v3
         with:
