--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -10,15 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 检出你的仓库代码（包含 config/ 和 scripts/）
       - uses: actions/checkout@v3
 
-      # 2. 安装 jq
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
-        
 
-      # 3. 恢复上次构建版本缓存
       - name: Restore last built version cache
         id: cache-version
         uses: actions/cache@v3
@@ -26,16 +22,13 @@ jobs:
           path: last_build_version.txt
           key: last-build-version-cache
           restore-keys: last-build-version-cache
-          
 
-      # 4. 获取最新 OpenWrt stable release tag
       - name: Get latest OpenWrt stable release tag
         id: get_latest_tag
         run: |
           TAG=$(curl -s https://api.github.com/repos/openwrt/openwrt/tags | jq -r '.[].name' | grep '^v[0-9]' | grep -vE 'rc|SNAPSHOT' | sort -Vr | head -n1)
           echo "latest_tag=$TAG" >> $GITHUB_OUTPUT
 
-      # 5. 版本对比，判断是否跳过构建
       - name: Compare versions
         id: compare
         run: |
@@ -49,13 +42,10 @@ jobs:
             echo "New version detected. Proceeding."
           fi
 
-      # 6. 克隆 OpenWrt 源码（指定最新标签）
       - name: Clone OpenWrt source
         run: |
           git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
 
-
-      # 7. 释放磁盘空间
       - name: Free up disk space
         uses: jlumbroso/free-disk-space@main
         with:
@@ -66,11 +56,9 @@ jobs:
           large-packages: true
           swap-storage: true
 
-      # 8. 查看磁盘空间
       - name: Show available disk space
         run: df -h
 
-      # 9. 安装依赖
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -80,18 +68,15 @@ jobs:
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
             rsync unzip zlib1g-dev file wget python3-pyelftools ccache ash
 
-      # 10. 更新 feeds
       - name: Update all feeds
         run: |
           cd openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      # 11. 创建 openwrt/scripts 目录，避免复制失败
       - name: Prepare openwrt/scripts directory
         run: mkdir -p openwrt/scripts
 
-      # 12. 复制配置和脚本文件，并赋执行权限
       - name: Copy config and scripts
         run: |
           cp config/.config openwrt/.config
@@ -99,11 +84,9 @@ jobs:
           cp -r scripts/. openwrt/scripts/
           chmod +x openwrt/customize.sh openwrt/scripts/*.sh
 
-      # 13. 查看复制后的脚本目录内容
       - name: List openwrt/scripts contents
         run: ls -l openwrt/scripts
 
-      # 14. 运行 ext_packages.sh 脚本（如果存在）
       - name: Run ext_packages.sh if present
         run: |
           cd openwrt
@@ -115,63 +98,55 @@ jobs:
             exit 1
           fi
 
-
-      # 15. 运行 customize.sh
       - name: Run customize.sh
         run: |
           cd openwrt
           chmod +x customize.sh
           ./customize.sh
 
-      # 16. 生成 defconfig 并下载源码
       - name: Make defconfig and download sources
         run: |
           cd openwrt
           make defconfig
           make download -j8
 
-      # 17. 编译 OpenWrt x86_64
       - name: Build OpenWrt x86_64
         run: |
           cd openwrt
           make -j$(nproc) || make -j1 V=s
 
-      # 18. 提取 OpenWrt 版本号
+      # ✅ 提取 OpenWrt 版本号
       - name: Extract OpenWrt version
         id: getversion
         run: |
           cd openwrt
           VERSION=$(grep '^VERSION:=' include/version.mk | cut -d '=' -f2 | tr -d ' ')
           PATCHLEVEL=$(grep '^PATCHVER:=' include/version.mk | cut -d '=' -f2 | tr -d ' ')
-          FULLVERSION="${VERSION}.${PATCHLEVEL}"
+          PATCHLEVEL=${PATCHLEVEL:-0}
+          FULLVERSION="v${VERSION}.${PATCHLEVEL}"
           echo "Detected version: $FULLVERSION"
           echo "fullversion=$FULLVERSION" >> $GITHUB_OUTPUT
 
-      # 19. 获取构建时间
       - name: Get build time
         id: buildtime
         run: echo "time=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
-      # 20. 创建 GitHub Release 并上传固件
       - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.IGH_TOKEN }}
-          tag: openwrt-x86_64-${{ github.run_id }}
+          tag: ${{ steps.getversion.outputs.fullversion }}
           name: OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
           body: |
             🎉 OpenWrt x86_64 ${{ steps.getversion.outputs.fullversion }}
             📅 构建时间：${{ steps.buildtime.outputs.time }}
           artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
 
-      # 21. 保存本次构建的版本号到文件
       - name: Save latest built version to file
         run: echo "${{ steps.getversion.outputs.fullversion }}" > last_build_version.txt
 
-      # 22. 缓存最新版本号文件
       - name: Save last built version cache
         uses: actions/cache@v3
         with:
           path: last_build_version.txt
           key: last-build-version-cache-${{ steps.getversion.outputs.fullversion }}
-
